--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
