--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "webpack": "^2.3.2"
+    "uglifyjs-webpack-plugin": "^0.4.0",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack -p",
+    "dev": "webpack --progress --watch"
   },
   "keywords": [],
   "author": "",
